--- a/styles/Seq.module.scss
+++ b/styles/Seq.module.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -6,6 +8,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+
+  @include variables.mq(sm) {
+    margin: 0 1rem;
+  }
 }
 
 .main {
@@ -46,14 +52,15 @@
   padding: 2rem;
   margin: 0.5rem;
   background: #e0e0e0;
-  box-shadow: -5px 5px 10px #bebebe, 5px -5px 10px #ffffff;
+  box-shadow: -5px 5px 10px #bebebe, 5px -5px 10px variables.$white;
   cursor: pointer;
 
   &--pushed {
-    box-shadow: inset -5px 5px 10px #bebebe, inset 5px -5px 10px #ffffff;
+    box-shadow: inset -5px 5px 10px #bebebe,
+      inset 5px -5px 10px variables.$white;
   }
 
   &--current {
-    background: #fff;
+    background: variables.$white;
   }
 }
