--- a/styles/Seq.module.scss
+++ b/styles/Seq.module.scss
@@ -52,12 +52,13 @@
   padding: 2rem;
   margin: 0.5rem;
   background: #e0e0e0;
-  box-shadow: -5px 5px 10px #bebebe, 5px -5px 10px variables.$white;
+  box-shadow: -5px 5px 16px #bebebe, 5px -5px 16px variables.$white;
   cursor: pointer;
+  border-radius: 8px;
 
   &--pushed {
-    box-shadow: inset -5px 5px 10px #bebebe,
-      inset 5px -5px 10px variables.$white;
+    box-shadow: inset -5px 5px 16px #bebebe,
+      inset 5px -5px 16px variables.$white;
   }
 
   &--current {
